Fixed Errors when loading data files

--- a/tests_paper.ipynb
+++ b/tests_paper.ipynb
@@ -230,12 +230,12 @@
         "\n",
         "\n",
         "def merge_arima(data_name, which):\n",
-        "    data1 = pd.read_csv(f'{data_name}_many_alpha_new{which}.csv')\n",
-        "    data2 = pd.read_csv(f'{data_name}_many_alpha_new_ARIMA.csv')\n",
+        "    data1 = pd.read_csv(f'Results/{data_name}_many_alpha_new{which}.csv')\n",
+        "    data2 = pd.read_csv(f'Results/{data_name}_many_alpha_new_ARIMA.csv')\n",
         "    data1 = pd.concat((data1, data2))\n",
         "    data1.reset_index(inplace=True)\n",
         "    print(data1.shape)\n",
-        "    data1.to_csv(f'{data_name}_many_alpha_new{which}.csv', index=False)\n",
+        "    data1.to_csv(f'Results/{data_name}_many_alpha_new{which}.csv', index=False)\n",
         "\n",
         "\n",
         "for data_name in Data_name:\n",
