Completed STEP 5) in bootstrap_paper_new.ipynb.

--- a/bootstrap_paper_new.ipynb
+++ b/bootstrap_paper_new.ipynb
@@ -1115,13 +1115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "345317d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# hold predictions from each f^b\n",
-    "boot_testions = np.zeros((B, (n + n1)), dtype=float)\n",
+    "boot_predictions = np.zeros((B, (n + n1)), dtype=float)\n",
     "# for i^th column, it shows which f^b uses i in training (so exclude in aggregation)\n",
     "in_boot_sample = np.zeros((B, n), dtype=bool)\n",
     "out_sample_test = np.zeros((n, n1))\n",
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "4c1182f6",
    "metadata": {},
    "outputs": [
@@ -1138,8 +1138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.16 s, sys: 7.59 s, total: 9.75 s\n",
-      "Wall time: 1.55 s\n"
+      "CPU times: user 2.78 s, sys: 9.96 s, total: 12.7 s\n",
+      "Wall time: 2.04 s\n"
      ]
     }
    ],
@@ -1162,8 +1162,11 @@
     "        # callbacks=[callback],\n",
     "        # verbose=0,\n",
     "    )\n",
-    "\n",
-    "    boot_testions[b] = model.predict(np.r_[X_train, X_test]).flatten()\n",
+    "    \n",
+    "    # Model's prediction for every observation on every bootstrapped data\n",
+    "    boot_predictions[b] = model.predict(np.r_[X_train, X_test]).flatten()\n",
+    "    # Whether a observation in the training data is sampled for the given bootstrapped data\n",
+    "    # If it is true, then this observation should NOT be used for model prediction\n",
     "    in_boot_sample[b, boot_samples_idx[b]] = True"
    ]
   },
@@ -1178,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "1bbf06b0",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1191,7 @@
        "((1728, 24), (1728,), (7007, 24), (7007,))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,23 +1202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "id": "ae0a5791",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((25, 1728), (25, 8735))"
+       "((25, 1728), (25, 1728), (25, 8735))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "in_boot_sample.shape, boot_testions.shape"
+    "boot_samples_idx.shape, in_boot_sample.shape, boot_predictions.shape"
    ]
   },
   {
@@ -1229,39 +1232,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "id": "fd6de028",
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0"
+    "i = 0  # first observation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "6f23f2b3",
+   "execution_count": 72,
+   "id": "ae6e98ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False,  True,  True, ..., False, False, False],\n",
-       "       [False, False,  True, ..., False, False, False],\n",
-       "       [False, False, False, ..., False, False, False],\n",
-       "       ...,\n",
-       "       [False, False,  True, ..., False, False, False],\n",
-       "       [False, False, False, ..., False, False, False],\n",
-       "       [False, False, False, ..., False, False, False]])"
+       "array([ True,  True,  True, False,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "in_boot_sample"
+    "~(in_boot_sample[:, i])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e1861d37",
+   "metadata": {},
+   "source": [
+    "Bootstrapped models where their respective boostrapped dataset that does NOT contain the observation i. Therefore, thsese models are safe to be used to prediction observation i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e76d2343",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "       18, 19, 21, 22, 23, 24])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_keep = np.argwhere(~(in_boot_sample[:, i])).reshape(-1)\n",
+    "b_keep"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0d1cabab",
+   "metadata": {},
+   "source": [
+    "Aggregate the b_keep model predictions and append it to Ensemble_train_interval_centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "61699ec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.081968740730106]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ensemble_train_interval_centers = ([])\n",
+    "# if there is bootstraps, in this case yes\n",
+    "if len(b_keep) > 0:\n",
+    "    ensemble_train_interval_centers.append(\n",
+    "        boot_predictions[b_keep, i].mean()  # aggregation\n",
+    "    )\n",
+    "    print(ensemble_train_interval_centers)  # aggregates the predictions for the 23 models for i=0"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f40615ac",
+   "metadata": {},
+   "source": [
+    "Get the LOO residual for i=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "00cab886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 4.081968740730106, -4.081968740730106)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resid_LOO = y_train[i] - boot_predictions[b_keep, i].mean()\n",
+    "\n",
+    "y_train[i], boot_predictions[b_keep, i].mean(), resid_LOO"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a38e462b",
+   "metadata": {},
+   "source": [
+    "out_sample_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "b2751b51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_sample_predict = np.zeros((n, n1)) # len(train), len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "6e82d7cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1728, 7007), (25, 8735))"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_sample_predict.shape, boot_predictions.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9b089b12",
+   "metadata": {},
+   "source": [
+    "Get the combination b_keep models for i and use that to predict the test set. Store predictions in ith row of out_sample_predict."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "26e8453a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((23, 7007), (7007,))"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boot_predictions[b_keep, n:].shape, boot_predictions[b_keep, n:].mean(0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "6f23f2b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_sample_predict[i] = boot_predictions[b_keep, n:].mean(0)"
    ]
   },
   {
@@ -1288,247 +1464,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "e3eb9f59",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 21, 22, 23, 24])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b_keep = np.argwhere(~(in_boot_sample[:, i])).reshape(-1)\n",
-    "b_keep  # bootstraps models to keep to evaluate i "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "6540da58",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((25, 8735), (23,))"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "boot_testions.shape, boot_testions[b_keep, i].shape"
+    "Append to ensemble_online_resid to resid_LOO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 102,
    "id": "d2848503",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ensemble_train_interval_centers = ([])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "32225e93",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4.081968740730106]"
+       "array([-4.08196874])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# if there is bootstraps, in this case yes\n",
-    "# if len(b_keep) > 0:\n",
-    "Ensemble_train_interval_centers.append(\n",
-    "    boot_testions[b_keep, i].mean()  # aggregation\n",
-    ")\n",
-    "Ensemble_train_interval_centers  # aggregates the predictions for the 6 models for i=0"
+    "ensemble_online_resid = np.array([])  # LOO scores\n",
+    "ensemble_online_resid = np.append(ensemble_online_resid, resid_LOO)\n",
+    "ensemble_online_resid"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "813681ca",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "28342000",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1728, array([0., 0., 0., ..., 0., 0., 0.]))"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(y_train), y_train"
+    "**Loop to get whole LOO**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "55faca44",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "d2957c89",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1728,), (25, 8735))"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.shape, boot_testions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "776ec4e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((), (23,))"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train[i].shape, boot_testions[b_keep, i].shape  # should swap dimensions??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "307c4bf3",
+   "execution_count": 110,
+   "id": "66caba40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resid_LOO = y_train[i] - boot_testions[b_keep, i].mean()\n",
-    "# out_sample_test[i] = boot_testions[b_keep, n:].mean(0)"
+    "ensemble_train_interval_centers = ([])  # Predicted training data centers by EnbPI\n",
+    "ensemble_online_resid = np.array([])    # LOO scores\n",
+    "out_sample_predict = np.zeros((n, n1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "996f82ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_sample_test[i] = boot_testions[b_keep, n:].mean(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "a9555f54",
+   "execution_count": 111,
+   "id": "9cbc46eb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1728, 7007)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out_sample_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a894f765",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "f899803e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (1378354890.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[51], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    # TO-DO\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 213 ms, sys: 49.1 ms, total: 262 ms\n",
+      "Wall time: 261 ms\n"
      ]
     }
    ],
    "source": [
-    "start = time.time()\n",
-    "keep = []\n",
-    "for i in range(n):  # n is len(X_train)\n",
-    "    # TO-DO"
+    "%%time\n",
+    "for i in range(n):\n",
+    "    b_keep = np.argwhere(~(in_boot_sample[:, i])).reshape(-1)\n",
+    "    if len(b_keep) > 0:\n",
+    "        # NOTE: Append these training centers too see their magnitude\n",
+    "        # The reason is sometimes they are TOO close to actual Y.\n",
+    "        ensemble_train_interval_centers.append(boot_predictions[b_keep, i].mean())\n",
+    "        resid_LOO = y_train[i] - boot_predictions[b_keep, i].mean()\n",
+    "        out_sample_predict[i] = boot_predictions[b_keep, n:].mean(0)\n",
+    "    else:  # if aggregating an empty set of models, predict zero everywhere\n",
+    "        resid_LOO = y_train[i]\n",
+    "        out_sample_predict[i] = np.zeros(n1)\n",
+    "    ensemble_online_resid = np.append(ensemble_online_resid, resid_LOO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
+   "id": "d3aa1365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1728, 1728, (1728, 7007))"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ensemble_train_interval_centers), len(ensemble_online_resid), out_sample_predict.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "12d98f99",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### **STEP 6) Get Nonconformity Scores, Q-hat, and Conformal Prediction Interval**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5a50d626",
+   "metadata": {},
    "source": []
   },
   {
